# spider

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  authenticated_page_cli_report.md  default.nix  example.rs  release.sh
benches/: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  build.rs  core.rs  crawl.rs  crawl_massive.rs  go_colly.rs  go_crolly.rs  node_crawler.rs  parse.rs
examples/: Cargo.toml  README.md  advanced_configuration.rs  anti_bots.rs  authenticated_page.rs  auto_encoding.rs  blacklist.rs  budget.rs  cache.rs  cache_chrome_hybrid.rs  cache_remote_skip_browser.rs  callback.rs  chrome.rs  chrome_nxdomain_test.rs  chrome_proxy_dns_shortcircuit.rs  chrome_remote.rs  chrome_remote_logrocket.rs  chrome_remote_tls.rs  chrome_screenshot.rs  chrome_screenshot_with_config.rs  chrome_sendable.rs  chrome_single_page.rs  chrome_viewport.rs  chrome_web_automation.rs  concurrent_profiles.rs  configuration.rs  cron.rs  css_scrape.rs  debug.rs  depth.rs  dns_nxdomain_test.rs  download.rs  download_to_react.rs  encoding.rs  example.rs  gemini.rs  loop.rs  mcp_oauth.rs  not_a_robot.rs  not_a_robot_chrome_ai.rs  (+39 more)
spider/: Cargo.toml  README.md
spider/benches/: allocator_bench.rs  streaming_link_extraction.rs
spider/src/: client.rs  configuration.rs  fetcher.rs  glob.rs  lib.rs  page.rs  proxy_strategy.rs  retry_strategy.rs  traits.rs  utils.rs  website.rs
spider/src/features/: automation.rs  chrome.rs  chrome_args.rs  chrome_common.rs  chrome_mouse_movements.rs  chrome_spoof.rs  chrome_viewport.rs  cron.rs  decentralized_headers.rs  disk.rs  gemini.rs  gemini_common.rs  glob.rs  mod.rs  openai.rs  openai_common.rs  search.rs  serde.rs  solvers.rs  spoof_referrer.rs  webdriver.rs  webdriver_args.rs  webdriver_common.rs
spider/src/utils/: abs.rs  adaptive_concurrency.rs  auto_throttle.rs  backoff.rs  bloom.rs  coalesce.rs  connect.rs  css_selectors.rs  detect_chrome.rs  detect_cpu.rs  detect_system.rs  dns_cache.rs  encoding.rs  etag_cache.rs  frontier.rs  h2_tracker.rs  header_utils.rs  hedge.rs  html_spool.rs  interner.rs  lazy_arc.rs  media_asset.rs  mod.rs  numa.rs  parallel_backends.rs  rate_limiter.rs  robots_cache.rs  tab_pool.rs  templates.rs  trie.rs  uring_fs.rs  validation.rs  vitals.rs  wait_guard.rs  warc.rs  zero_copy.rs
spider/tests/: buildinghub_smart_cert_repro.rs  chrome_first_byte_timing.rs  chrome_intercept_e2e.rs  chrome_intercept_flags.rs  chrome_intercept_goto_sequence.rs  chrome_intercept_handler_race.rs  chunk_idle_timeout.rs  dns_no_retry.rs  doi_smart_repro.rs  fleetio_smart_repro.rs  hedge_parallel_chrome_e2e.rs  live_spider_agent_cloud.rs  logrocket_network_map.rs  parallel_backends.rs  proxy_retry_strategy_fast_exit.rs  remote_fetcher.rs  sitemap_task_explosion.rs  smart_smoke_v117.rs  smart_vs_chrome.rs
spider/tests/crawler_test_com/: canonical_tags.rs  content.rs  description_tags.rs  encoding.rs  helpers.rs  javascript.rs  links.rs  main.rs  mobile.rs  other.rs  redirects.rs  robots_protocol.rs  social_tags.rs  status_codes.rs  titles.rs  urls.rs
spider/tests/fixtures/: logrocket_careers_markdown.md  network_blacklist_candidates_logrocket.txt
spider_agent/: Cargo.toml  README.md  SKILLS.md
spider_agent/examples/: basic_search.rs  concurrent.rs  extract.rs  extraction.rs  multimodal.rs  open_page_concurrent.rs  research.rs  scripting.rs  spider_browser_cloud.rs  spider_cloud_ecommerce_competitor.rs  spider_cloud_end_to_end.rs  spider_cloud_jobs_pipeline.rs  spider_cloud_prompt_flows.rs
spider_agent/src/: agent.rs  browser.rs  config.rs  error.rs  lib.rs  memory.rs  temp.rs  tools.rs  webdriver.rs
spider_agent/src/automation/: actions.rs  browser.rs  cache.rs  chain.rs  concurrent_chain.rs  confidence.rs  config.rs  content.rs  engine.rs  engine_error.rs  executor.rs  helpers.rs  html_cleaning.rs  html_diff.rs  long_term_memory.rs  map_result.rs  memory_ops.rs  mod.rs  planning.rs  (+9 more)
spider_agent/tests/: action_feedback_integration.rs  live_env_smoke.rs  live_spider_browser.rs  live_spider_cloud.rs  scripting.rs  thinking_integration.rs
spider_agent_html/: Cargo.toml  README.md  SKILLS.md
spider_agent_html/src/: cleaning.rs  lib.rs
spider_agent_types/: Cargo.toml  README.md  SKILLS.md
spider_agent_types/src/: actions.rs  chain.rs  concurrent_chain.rs  config.rs  content.rs  helpers.rs  html_diff.rs  lib.rs  map_result.rs  memory_ops.rs  observation.rs  prompts.rs  schema_gen.rs  selector_cache.rs  self_healing.rs  tool_calling.rs
spider_chrome/: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs
spider_chrome/cdp/: Cargo.toml  browser_protocol.pdl  js_protocol.pdl
spider_chrome/examples/: block-navigation.rs  console-logs.rs  evaluate.rs  fetcher-tokio.rs  fetcher.rs  httpfuture.rs  iframe-workaround.rs  incognito.rs  interception.rs  js-binding-listener.rs  pdf.rs  screenshot.rs  simple-google.rs  storage-cookie.rs  wiki-tokio.rs  wiki.rs
spider_chrome/fetcher/: Cargo.toml
spider_chrome/pdl/: Cargo.toml
spider_chrome/src/: async_process.rs  auth.rs  browser.rs  cmd.rs  conn.rs  detection.rs  element.rs  error.rs  js.rs  keys.rs  layout.rs  lib.rs  listeners.rs  page.rs  utils.rs
spider_chrome/types/: Cargo.toml
spider_cli/: Cargo.toml  README.md
spider_cli/src/: authenticated_page.rs  build_folders.rs  main.rs  oauth.rs
spider_fingerprint/: Cargo.toml  README.md  build.rs  chrome_versions.rs.fallback
spider_fingerprint/src/: configs.rs  lib.rs  spoof_gpu.rs  spoof_headers.rs  spoof_mouse_movement.rs  spoof_refererer.rs  spoof_user_agent.rs  spoof_viewport.rs  spoof_webgl.rs  spoofs.rs
spider_firewall/: Cargo.toml  README.md  build.rs
spider_firewall/src/: lib.rs
spider_mcp/: Cargo.toml  README.md
spider_mcp/src/: main.rs  server.rs  state.rs
spider_transformations/: Cargo.toml  LICENSE  README.md
spider_transformations/src/: html2xml.rs  lib.rs  markup5ever_rcdom.rs
spider_utils/: Cargo.toml  README.md
spider_utils/src/: lib.rs
spider_worker/: Cargo.toml  README.md
spider_worker/src/: main.rs
(+195 files in other folders)
