[workspace]
members = [
    "spider",
    "spider_worker",
    "spider_cli",
    "spider_utils",
    # internal
    "examples",
    "benches"]
resolver = "2"

# Temporary patch until spider_fingerprint 2.38.0 is published to crates.io
[patch.crates-io]
spider_fingerprint = { path = "../spider_fingerprint" }
