[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2021"
build = "build.rs"

[dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }

[[bench]]
name = "crawl"
path = "crawl.rs"
harness = false

[dependencies.spider]
version = "1.11.3"
path = "../spider"
default-features = false