[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
criterion = { version = "0.3.6", features = ["html_reports", "async_tokio"] }
spider = { path = "../spider" }

[[bench]]
name = "crawl"
path = "crawl.rs"
harness = false

[[bench]]
name = "crawl_massive"
path = "crawl_massive.rs"
harness = false

[features]
decentralized = ["spider/decentralized"]