[package]
name = "spider_examples"
version = "1.80.74"
authors = ["madeindjs <contact@rousseau-alexandre.fr>", "j-mendez <jeff@a11ywatch.com>"]
description = "Multithreaded web crawler written in Rust."
repository = "https://github.com/spider-rs/spider"
readme = "README.md"
keywords = ["crawler", "spider"]
categories = ["web-programming"]
license = "MIT"
documentation = "https://docs.rs/spider"
publish = false
edition = "2018"

[badges]
maintenance = { status = "as-is" }

[dev-dependencies]
convert_case = "0.5.0"
env_logger = "0.9.0"
htr = "0.5.27"
flexbuffers = "2.0.0"

[dependencies.spider]
version = "1.80.74"
path = "../spider"
features = ["serde"]

[[example]]
name = "example"
path = "example.rs"

[[example]]
name = "scrape"
path = "scrape.rs"

[[example]]
name = "debug"
path = "debug.rs"

[[example]]
name = "download"
path = "download.rs"

[[example]]
name = "download_to_react"
path = "download_to_react.rs"

[[example]]
name = "serde"
path = "serde.rs"

[[example]]
name = "subscribe"
path = "subscribe.rs"
required-features = ["spider/sync"]

[[example]]
name = "callback"
path = "callback.rs"

[[example]]
name = "sitemap"
path = "sitemap.rs"
required-features = ["spider/sitemap"]

[[example]]
name = "configuration"
path = "configuration.rs"

[[example]]
name = "budget"
path = "budget.rs"
required-features = ["spider/budget", "spider/sync"]

[[example]]
name = "depth"
path = "depth.rs"
required-features = ["spider/budget", "spider/sync"]

[[example]]
name = "cron"
path = "cron.rs"
required-features = ["spider/sync", "spider/cron"]

[[example]]
name = "chrome"
path = "chrome.rs"
required-features = ["spider/sync", "spider/chrome"]

[[example]]
name = "chrome_viewport"
path = "chrome_viewport.rs"
required-features = ["spider/sync", "spider/chrome"]

[[example]]
name = "chrome_screenshot"
path = "chrome_screenshot.rs"
required-features = ["spider/sync", "spider/chrome"]

[[example]]
name = "smart"
path = "smart.rs"
required-features = ["spider/sync", "spider/smart"]

[[example]]
name = "encoding"
path = "encoding.rs"
required-features = ["spider/sync", "spider/encoding"]

[[example]]
name = "advanced_configuration"
path = "advanced_configuration.rs"
required-features = ["spider/sync"]

[[example]]
name = "url_glob"
path = "url_glob.rs"
required-features = ["spider/sync", "spider/glob"]

[[example]]
name = "url_glob_subdomains"
path = "url_glob_subdomains.rs"
required-features = ["spider/sync", "spider/glob"]

[[example]]
name = "subscribe_download"
path = "subscribe_download.rs"
required-features = ["spider/sync"]